<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <DUT Name="ST_Converter" Id="{4313d378-33c4-4e25-8bfe-1738152a7a56}">
    <Declaration><![CDATA[TYPE ST_Converter :
STRUCT
	
	
	sNetID : STRING;
	nSlaveAddr	:UINT;
	nSubIndex	:ARRAY [0..13] OF BYTE;
	nIndex	:ARRAY [0..13] OF WORD;
	iSdoWrite	:ARRAY [0..13] OF INT; 
	
	iCoeWrt	: INT;
END_STRUCT
END_TYPE
]]></Declaration>
  </DUT>
</TcPlcObject>