<?xml version="1.0" encoding="utf-8"?>
<TcPlcObject Version="1.1.0.1" ProductVersion="3.1.4024.12">
  <GVL Name="GVL" Id="{a3a00f5d-a254-4cd1-b5b5-4ef8b28fd77c}">
    <Declaration><![CDATA[{attribute 'qualified_only'}
VAR_GLOBAL CONSTANT
	netId_bagmachie :ARRAY[0..2] OF STRING	:=['192.168.11.160.1.1','192.168.11.161.1.1','192.168.11.162.1.1'];//[0]:bag_opener;[1]:bag_closer;[2]:bag_compactor
END_VAR
VAR_GLOBAL

	
	
	rem : ARRAY[0..9] OF Replenishment_Module;
	pm	: ARRAY[0..9] OF Picking_Module;
	pmOthers	:ARRAY[0..4] OF PM_others;
	lc	: ARRAY[0..1] OF LateralRecy_Module;
	lb	: ARRAY[0..1] OF LateralBuf_Module;
	fr	: ARRAY[0..1] OF fixtureRotation_Module;
	
	
    stByte : REFERENCE TO ST_byte;
	ibyteNum			:ARRAY[1..32] OF  INT ;
	stMeasuringLC : ST_byte;
	byteLC AT%I*:ARRAY [1..32] OF BYTE;
	rfidIn AT%I*:ARRAY [0..31] OF BYTE;
	rfidOut AT%Q*:ARRAY [0..31] OF BYTE;
	arIn	: ARRAY[0..3] OF ST_IO_byte;
	arOut	: ARRAY[0..3] OF ST_IO_byte;
	n: INT;
	
	fb_remIOmapping	: ARRAY[0..9] OF FB_remIOmapping;
	fb_remAxisMapping	: ARRAY[0..19] OF FB_remAxisMapping;
	stAxisCtrl_Lift	: ARRAY[0..19]OF ST_axisCtrl;
	fbAxisCtrl_Lift	: ARRAY [0..19] OF FB_axisCtrl;
	
	

	fb_rmIOmapping	: ARRAY[0..4] OF FB_rmIOmapping;
	fb_pmAxisMapping	: ARRAY[0..19] OF FB_pmAxisMapping;
	stAxisCtrl_Buffer	: ARRAY[0..19]OF ST_axisCtrl;
	fbAxisCtrl_Buffer	: ARRAY [0..19] OF FB_axisCtrl;
	
	fbconverter	:ARRAY [0..13] OF  FB_Converter;
	stConverter	:ARRAY [0..13] OF  ST_Converter;
	
	ref_fbconverterMotor	:   ARRAY[0..57] OF POINTER TO FB_Converter;	
	

	
	fb_lcIOmappiing : ARRAY [0..1] OF FB_lcIOmapping;
	//fb_lcAxis	: ARRAY[0..1] OF FB_MotionAxis_MC;
	//stAxis_LC	: ARRAY[0..1] OF ST_MotionAxis_MC;
	stAxisCtrl_LC	: ARRAY[0..1]OF ST_axisCtrl;
	fbAxisCtrl_LC	: ARRAY [0..1] OF FB_axisCtrl;
	
	fb_lbIOmappiing : ARRAY [0..1] OF FB_lbIOmapping;
	
	
	
	fb_frIOmappiing : ARRAY [0..1] OF FB_frIOmapping;
	//fb_frAxis	: ARRAY[0..1] OF FB_MotionAxis_MC;
	//stAxis_FR	: ARRAY[0..1] OF ST_MotionAxis_MC;	
	stAxisCtrl_FR	: ARRAY[0..1]OF ST_axisCtrl;
	fbAxisCtrl_FR	: ARRAY [0..1] OF FB_axisCtrl;	
	
	
	safetyin AT%I*	: ARRAY[0..49]OF BYTE;
	safetyOut AT%Q*	: ARRAY[0..49]OF BYTE;
	
	

	adsArr_bagMachine	: ARRAY[0..2] OF AdsArr;
	adsread		: ARRAY[0..2] OF ADSREAD;
	adswrite	: ARRAY[0..2] OF ADSWRITE;
	bread		: ARRAY[0..2] OF BOOL;
	bwrite		: ARRAY[0..2] OF BOOL;
	
	fb_bagOpener	: FB_BagOpener;
	fb_bagCloser	: FB_BagCloser;
	fb_bagCompactor	: FB_BagCompactor;
	
	adsReadByName	: FB_ReadAdsSymByName;
	adsReadEvents	: FB_AdsReadEvents;
	
	bBagmachine_test	: BOOL;
	
	fr_actTorque	AT%I*	: ARRAY[0..1]OF LREAL ;
	fr_torqueLimitSet		: ARRAY[0..1]OF LREAL :=[120,120] ;
END_VAR]]></Declaration>
  </GVL>
</TcPlcObject>